1) Distribution of ratings

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Milestone 2 - the daTaBABES"
+    "# Milestone 2 - the daTaBABES"
    ]
   },
   {
