--- a/eda.ipynb
+++ b/eda.ipynb
@@ -64,7 +64,7 @@
     "# loading the two datasets \n",
     "\n",
     "ratings_ba_df = pd.read_csv('data/BeerAdvocate/ratings_BA.csv')\n",
-    "#ratings_rb_df = pd.read_csv('data/RateBeer/ratings_RB.csv')\n",
+    "ratings_rb_df = pd.read_csv('data/RateBeer/ratings_RB.csv')\n",
     "\n",
     "\n",
     "# loading the users dataset \n",
@@ -1190,7 +1190,7 @@
    "outputs": [],
    "source": [
     "us_texts_ba = ratings_ba_df.merge(users_ba_df, on='user_id', how='inner')\n",
-    "#us_texts_rb = ratings_rb_df.merge(users_rb_df, on='user_id', how='inner')"
+    "us_texts_rb = ratings_rb_df.merge(users_rb_df, on='user_id', how='inner')"
    ]
   },
   {
@@ -1201,7 +1201,7 @@
    "source": [
     "# dropping missing text\n",
     "us_texts_ba = us_texts_ba.dropna(subset=['text'])\n",
-    "#us_texts_rb = us_texts_rb.dropna(subset=['text'])"
+    "us_texts_rb = us_texts_rb.dropna(subset=['text'])"
    ]
   },
   {
@@ -1210,8 +1210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "texts = list(us_texts_ba['text'].values) \n",
-    "#+ list(us_texts_rb['text'].values)"
+    "texts = list(us_texts_ba['text'].values) + list(us_texts_rb['text'].values)"
    ]
   },
   {
