--- a/eda.ipynb
+++ b/eda.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "# loading the two datasets \n",
     "\n",
     "ratings_ba_df = pd.read_csv('data/BeerAdvocate/ratings_BA.csv')\n",
-    "ratings_rb_df = pd.read_csv('data/RateBeer/ratings_RB.csv')\n",
+    "#ratings_rb_df = pd.read_csv('data/RateBeer/ratings_RB.csv')\n",
     "\n",
     "\n",
     "# loading the users dataset \n",
@@ -8243,6 +8243,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now count the occurences of our key words in the different texts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
@@ -8338,7 +8345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
