start bad reviews, modif reviews sample

--- a/eda_ajku_keywords.ipynb
+++ b/eda_ajku_keywords.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,8 +506,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for each beer_id, keep a maximum sample of 100 reviews\n",
-    "beer_reviews_sample = good_ratings_combined_df.groupby('beer_id').apply(lambda x: x.sample(min(len(x), 1))).reset_index(drop=True)"
+    "# for each beer_id, keep a maximum sample of mean reviews\n",
+    "mean = 14\n",
+    "beer_reviews_sample = good_ratings_combined_df.groupby('beer_id').apply(lambda x: x.sample(min(len(x), mean))).reset_index(drop=True)"
    ]
   },
   {
@@ -542,7 +543,7 @@
     "good_appearance_list = []\n",
     "good_carbonation_list = []\n",
     "\n",
-    "sample_reviews = good_ratings_combined_df['text'].sample(100000)\n",
+    "sample_reviews = beer_reviews_sample['text'].sample(100000)\n",
     "\n",
     "for i, text in enumerate(sample_reviews.values.tolist()):\n",
     "    # for each keyword list, extract the keywords from the text\n",
@@ -1717,6 +1718,202 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keywords extraction of the good reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group by beer_id and count the number of reviews for each beer\n",
+    "bad_reviews_count = bad_ratings_combined_df.groupby('beer_id').count()['text'].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of bad reviews per beer: 10.794914795518912\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Average number of bad reviews per beer:\", bad_reviews_count.text.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>206914.000000</td>\n",
+       "      <td>206914.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>183753.449404</td>\n",
+       "      <td>10.794915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>138729.625737</td>\n",
+       "      <td>46.932122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>67265.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>155377.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>274226.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>536434.000000</td>\n",
+       "      <td>2206.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             beer_id           text\n",
+       "count  206914.000000  206914.000000\n",
+       "mean   183753.449404      10.794915\n",
+       "std    138729.625737      46.932122\n",
+       "min         1.000000       1.000000\n",
+       "25%     67265.500000       1.000000\n",
+       "50%    155377.000000       2.000000\n",
+       "75%    274226.500000       5.000000\n",
+       "max    536434.000000    2206.000000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad_reviews_count.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Continuing with the threshold idea, we will keep a maximum of 100 bad reviews per beer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each beer_id, keep a maximum sample of mean reviews\n",
+    "mean = 11\n",
+    "bad_reviews_sample = bad_ratings_combined_df.groupby('beer_id').apply(lambda x: x.sample(min(len(x), mean))).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_aroma_list = []\n",
+    "bad_taste_list = []\n",
+    "bad_palate_list = []\n",
+    "bad_appearance_list = []\n",
+    "bad_carbonation_list = []\n",
+    "\n",
+    "bad_sample_reviews = bad_ratings_combined_df['text'].sample(100000)\n",
+    "\n",
+    "for i, text in enumerate(bad_sample_reviews.values.tolist()):\n",
+    "    # for each keyword list, extract the keywords from the text\n",
+    "    bad_aroma_list.extend(extract_keywords(text, aroma_keywords))\n",
+    "    bad_taste_list.extend(extract_keywords(text, taste_keywords))\n",
+    "    bad_palate_list.extend(extract_keywords(text, palate_keywords))\n",
+    "    bad_appearance_list.extend(extract_keywords(text, appearance_keywords))\n",
+    "    bad_carbonation_list.extend(extract_keywords(text, carbonation_keywords))\n",
+    "    \n",
+    "    bad_aroma_set = Counter(bad_aroma_list)\n",
+    "    bad_taste_set = Counter(bad_taste_list)\n",
+    "    bad_palate_set = Counter(bad_palate_list)\n",
+    "    bad_appearance_set = Counter(bad_appearance_list)\n",
+    "    bad_carbonation_set = Counter(bad_carbonation_list)\n",
+    "    \n",
+    "    if i % 1000 == 0:\n",
+    "        # save it into json files\n",
+    "        with open('data/bad_aroma_keywords.json', 'w') as f:\n",
+    "            json.dump(bad_aroma_set, f)\n",
+    "        \n",
+    "        with open('data/bad_taste_keywords.json', 'w') as f:\n",
+    "            json.dump(bad_taste_set, f)\n",
+    "        \n",
+    "        with open('data/bad_palate_keywords.json', 'w') as f:\n",
+    "            json.dump(bad_palate_set, f)\n",
+    "        \n",
+    "        with open('data/bad_appearance_keywords.json', 'w') as f:\n",
+    "            json.dump(bad_appearance_set, f)\n",
+    "        \n",
+    "        with open('data/bad_carbonation_keywords.json', 'w') as f:\n",
+    "            json.dump(bad_carbonation_set, f)\n",
+    "            \n",
+    "        print(\"File saved at iteration\", i)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1726,7 +1923,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
