--- a/alc.ipynb
+++ b/alc.ipynb
@@ -737,6 +737,49 @@
     "\n",
     "Overall, while there is a statistically significant influence of ABV on the rating, the R-squared value suggests that ABV alone explains only a small portion of the variability in the rating."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ToDo\n",
+    "\n",
+    "Match les deux dataset pour les bières<br>\n",
+    "\n",
+    "analyse par mois<br>\n",
+    "quel pourcentage est le plus préféré\n",
+    "\n",
+    "2 analyses:<br>\n",
+    "--> quelle est le pourcentage préf (par mois)<br>\n",
+    "--> quelle est la bière préf (par mois) --> extraire pourcentage et comparer<br>\n",
+    "----> définir un type de bière avec un certain pourcentage optimal par mois\n",
+    "\n",
+    "à chaque fois prouver et justifier (montrer quoi trouvé et pourqoui)\n",
+    "\n",
+    "esq style a son pourventage ou juste chaque bière\n",
+    "\n",
+    "\n",
+    "le dataset final (justifié) va être matché pour les styles, mais il y a tjrs les binchs individuelles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13.12.23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -755,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
