including bad keywords analysis. Tmp file with removed cells.!!!

--- a/eda_ajku_keywords.ipynb
+++ b/eda_ajku_keywords.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "['malty', 'amazing', 'metallic']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1992,8 +1992,6 @@
     "bad_appearance_list = []\n",
     "bad_carbonation_list = []\n",
     "\n",
-    "# we keep a sample of 100000 reviews, for performance reasons and also the fact that beers are often described with the same keywords\n",
-    "# therefore we do not need to go through all reviews to get an accurate dictionary of keywords.\n",
     "bad_sample_reviews = bad_ratings_combined_df['text'].sample(100000)\n",
     "\n",
     "for i, text in enumerate(bad_sample_reviews.values.tolist()):\n",
@@ -2039,39 +2037,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open the json files and load them into a dictionary\n",
     "with open('data/bad_aroma_keywords.json') as f:\n",
-    "    bad_aroma_dict = json.load(f)\n",
+    "    aroma_dict = json.load(f)\n",
     "\n",
     "with open('data/bad_taste_keywords.json') as f:\n",
-    "    bad_taste_dict = json.load(f)\n",
+    "    taste_dict = json.load(f)\n",
     "    \n",
     "with open('data/bad_palate_keywords.json') as f:\n",
-    "    bad_palate_dict = json.load(f)\n",
+    "    palate_dict = json.load(f)\n",
     "\n",
     "with open('data/bad_appearance_keywords.json') as f:\n",
-    "    bad_appearance_dict = json.load(f)\n",
+    "    appearance_dict = json.load(f)\n",
     "    \n",
     "with open('data/bad_carbonation_keywords.json') as f:\n",
-    "    bad_carbonation_dict = json.load(f)"
+    "    carbonation_dict = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenate all the keywords aroma_keywords, taste_keywords, palate_keywords, appearance_keywords\n",
+    "# create a function to filter the keys from the dictionary\n",
+    "def filter_bad_keywords(keywords):\n",
+    "    filtered_bad_keywords = []\n",
+    "    \n",
+    "    for keyword in keywords:\n",
+    "        \n",
+    "        # remove the keyowrds that have special characters, numbers and punctuation\n",
+    "        if not re.match('^[a-zA-Z]+$', keyword):\n",
+    "            continue\n",
+    "        \n",
+    "        # remove the keywords that are less than 3 characters\n",
+    "        if len(keyword) < 3:\n",
+    "            continue\n",
+    "        \n",
+    "        # remove keywords that have the word 'beer' in them\n",
+    "        if keyword == 'beer':\n",
+    "            continue\n",
+    "        \n",
+    "        # if the keyword is not in the all_keywords list, add it to the filtered_keywords list\n",
+    "        if keyword not in all_keywords:\n",
+    "            filtered_bad_keywords.append(keyword)\n",
+    "    \n",
+    "    return filtered_bad_keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filter the keywords\n",
-    "bad_aroma_words = filter_keywords(bad_aroma_dict.keys())\n",
-    "bad_taste_words = filter_keywords(bad_taste_dict.keys())\n",
-    "bad_palate_words = filter_keywords(bad_palate_dict.keys())\n",
-    "bad_appearance_words = filter_keywords(bad_appearance_dict.keys())\n",
-    "bad_carbonation_words = filter_keywords(bad_carbonation_dict.keys())\n",
+    "bad_aroma_words = filter_bad_keywords(aroma_dict.keys())\n",
+    "bad_taste_words = filter_bad_keywords(taste_dict.keys())\n",
+    "bad_palate_words = filter_bad_keywords(palate_dict.keys())\n",
+    "bad_appearance_words = filter_bad_keywords(appearance_dict.keys())\n",
+    "bad_carbonation_words = filter_bad_keywords(carbonation_dict.keys())\n",
     "\n",
     "# reconstruct the dictionaries with the filtered keywords\n",
     "bad_aroma_dict = {key: aroma_dict[key] for key in bad_aroma_words}\n",
@@ -2083,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3122,7 @@
        " ...}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3110,28 +3140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of aroma keywords: 5574\n",
-      "Number of taste keywords: 6322\n",
-      "Number of palate keywords: 4628\n",
-      "Number of appearance keywords: 6002\n",
-      "Number of carbonation keywords: 3183\n"
+      "Number of aroma keywords: 7133\n",
+      "Number of taste keywords: 7965\n",
+      "Number of palate keywords: 6566\n",
+      "Number of appearance keywords: 7822\n",
+      "Number of carbonation keywords: 4410\n"
      ]
     }
    ],
    "source": [
     "# print the size of each dictionary\n",
-    "print(\"Number of aroma keywords:\", len(bad_aroma_dict))\n",
-    "print(\"Number of taste keywords:\", len(bad_taste_dict))\n",
-    "print(\"Number of palate keywords:\", len(bad_palate_dict))\n",
-    "print(\"Number of appearance keywords:\", len(bad_appearance_dict))\n",
-    "print(\"Number of carbonation keywords:\", len(bad_carbonation_dict))"
+    "print(\"Number of aroma keywords:\", len(aroma_dict))\n",
+    "print(\"Number of taste keywords:\", len(taste_dict))\n",
+    "print(\"Number of palate keywords:\", len(palate_dict))\n",
+    "print(\"Number of appearance keywords:\", len(appearance_dict))\n",
+    "print(\"Number of carbonation keywords:\", len(carbonation_dict))"
    ]
   }
  ],
