--- a/eda_good_keywords_2.ipynb
+++ b/eda_good_keywords_2.ipynb
@@ -3472,19 +3472,19 @@
    "source": [
     "# For taste\n",
     "print(\"Best beers for taste:\")\n",
-    "get_best_beers(combinde_ratings_df, 'taste', 10)\n",
+    "get_best_beers(ratings_combined_df, 'taste', 10)\n",
     "\n",
     "# For aroma\n",
     "print(\"Best beers for aroma:\")\n",
-    "get_best_beers(combinde_ratings_df, 'aroma', 10)\n",
+    "get_best_beers(ratings_combined_df, 'aroma', 10)\n",
     "\n",
     "# For appearance\n",
     "print(\"Best beers for appearance:\")\n",
-    "get_best_beers(combinde_ratings_df, 'appearance', 10)\n",
+    "get_best_beers(ratings_combined_df, 'appearance', 10)\n",
     "\n",
     "# For palate\n",
     "print(\"Best beers for palate:\")\n",
-    "get_best_beers(combinde_ratings_df, 'palate', 10)\n"
+    "get_best_beers(ratings_combined_df, 'palate', 10)\n"
    ]
   },
   {
@@ -3549,7 +3549,7 @@
    ],
    "source": [
     "# print the average rating for the dataframe \n",
-    "average_rating = combinde_ratings_df['rating'].mean()\n",
+    "average_rating = ratings_combined_df['rating'].mean()\n",
     "print(\"Average rating:\", average_rating)"
    ]
   },
@@ -3589,7 +3589,7 @@
     }
    ],
    "source": [
-    "beer_rating_df = combinde_ratings_df.copy()\n",
+    "beer_rating_df = ratings_combined_df.copy()\n",
     "\n",
     "beer_rating_df['above_average'] = beer_rating_df['rating'] > average_rating\n",
     "beer_rating_df['below_average'] = beer_rating_df['rating'] <= average_rating\n",
@@ -3625,7 +3625,7 @@
    "source": [
     "# print the name of the beer with the highest lower bound of the confidence interval\n",
     "beer_id = beer_rating_df.iloc[0]['beer_id']\n",
-    "beer_name = combinde_ratings_df[combinde_ratings_df['beer_id'] == beer_id].iloc[0]['beer_name']\n",
+    "beer_name = ratings_combined_df[ratings_combined_df['beer_id'] == beer_id].iloc[0]['beer_name']\n",
     "print(\"The beer with the highest lower bound of the confidence interval is:\", beer_name)"
    ]
   },
@@ -3745,19 +3745,19 @@
    "source": [
     "# for taste\n",
     "print(\"Best beers for taste:\")\n",
-    "taste_beer_ids = get_wilson_beers(combined_ratings_df, 'taste', n=10)\n",
+    "taste_beer_ids = get_wilson_beers(ratings_combined_df, 'taste', n=10)\n",
     "\n",
     "# for aroma\n",
     "print(\"Best beers for aroma:\")\n",
-    "aroma_beer_ids = get_wilson_beers(combinde_ratings_df, 'aroma', n=10)\n",
+    "aroma_beer_ids = get_wilson_beers(ratings_combined_df, 'aroma', n=10)\n",
     "\n",
     "# for appearance\n",
     "print(\"Best beers for appearance:\")\n",
-    "appearance_beer_ids = get_wilson_beers(combinde_ratings_df, 'appearance', n=10)\n",
+    "appearance_beer_ids = get_wilson_beers(ratings_combined_df, 'appearance', n=10)\n",
     "\n",
     "# for palate\n",
     "print(\"Best beers for palate:\")\n",
-    "palate_beer_ids = get_wilson_beers(combinde_ratings_df, 'palate', n=10)\n"
+    "palate_beer_ids = get_wilson_beers(ratings_combined_df, 'palate', n=10)\n"
    ]
   },
   {
@@ -3774,7 +3774,7 @@
    "outputs": [],
    "source": [
     "# drop rows where there are null values for taste, aroma, appearance, palate\n",
-    "combinde_ratings_df.dropna(inplace=True)"
+    "ratings_combined_df.dropna(inplace=True)"
    ]
   },
   {
@@ -3807,7 +3807,7 @@
    ],
    "source": [
     "# Calculate correlation coefficients\n",
-    "correlation_matrix = combinde_ratings_df[['rating', 'taste', 'aroma', 'appearance', 'palate']].corr()\n",
+    "correlation_matrix = ratings_combined_df[['rating', 'taste', 'aroma', 'appearance', 'palate']].corr()\n",
     "\n",
     "# Print the correlation matrix\n",
     "print(\"Correlation Matrix:\")\n",
@@ -3879,8 +3879,8 @@
     "from sklearn import linear_model\n",
     "import statsmodels.api as sm\n",
     "\n",
-    "X = combinde_ratings_df[['taste', 'aroma', 'appearance', 'palate']]\n",
-    "y = combinde_ratings_df['rating']\n",
+    "X = ratings_combined_df[['taste', 'aroma', 'appearance', 'palate']]\n",
+    "y = ratings_combined_df['rating']\n",
     "\n",
     "\n",
     "clf = linear_model.LinearRegression(fit_intercept=False)\n",
@@ -3929,8 +3929,8 @@
    "outputs": [],
    "source": [
     "# drop rows where text is missing\n",
-    "good_ratings_combined_df.dropna(subset=['text'], inplace=True)\n",
-    "bad_ratings_combined_df.dropna(subset=['text'], inplace=True)"
+    "ratings_combined_df.dropna(subset=['text'], inplace=True)\n",
+    "ratings_combined_df.dropna(subset=['text'], inplace=True)"
    ]
   },
   {
@@ -3957,8 +3957,8 @@
     }
    ],
    "source": [
-    "X = good_ratings_combined_df[['taste', 'aroma', 'appearance', 'palate']]\n",
-    "y = good_ratings_combined_df['rating']\n",
+    "X = ratings_combined_df[['taste', 'aroma', 'appearance', 'palate']]\n",
+    "y = ratings_combined_df['rating']\n",
     "\n",
     "\n",
     "clf = linear_model.LinearRegression(fit_intercept=False)\n",
@@ -4006,7 +4006,7 @@
    ],
    "source": [
     "# List of months\n",
-    "months = sorted(good_ratings_combined_df['month'].unique())\n",
+    "months = sorted(ratings_combined_df['month'].unique())\n",
     "\n",
     "# Set up subplots\n",
     "fig, axes = plt.subplots(3, 4, figsize=(15, 10))\n",
@@ -4017,7 +4017,7 @@
     "\n",
     "for i, month in enumerate(months):\n",
     "    # Filter data for the current month\n",
-    "    month_df = good_ratings_combined_df[good_ratings_combined_df['month'] == month]\n",
+    "    month_df = ratings_combined_df[ratings_combined_df['month'] == month]\n",
     "    \n",
     "    # Define X and y for the current month\n",
     "    X = month_df[['taste', 'aroma', 'appearance', 'palate']]\n",
@@ -4094,7 +4094,7 @@
    "outputs": [],
    "source": [
     "# group by beer_id and count the number of reviews for each beer\n",
-    "beer_reviews_count = good_ratings_combined_df.groupby('beer_id').count()['text'].reset_index()"
+    "beer_reviews_count = ratings_combined_df.groupby('beer_id').count()['text'].reset_index()"
    ]
   },
   {
@@ -5245,6 +5245,90 @@
     "    print(\"Month\", month)\n",
     "    print(top_keywords_by_month_appearance[month])\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_best_beers(df, attribute, n=10):\n",
+    "    \n",
+    "    beers_rating_ba_df = df[df['dataset'] == 'BeerAdvocate'].copy()\n",
+    "    beers_rating_rb_df = df[df['dataset'] == 'RateBeer'].copy()\n",
+    "    \n",
+    "    # For RateBeer dataset\n",
+    "    average_rating_ba = beers_rating_ba_df[attribute].mean()\n",
+    "    average_rating_rb = beers_rating_rb_df[attribute].mean()\n",
+    "    \n",
+    "    beers_rating_rb_df['above_average'] = beers_rating_rb_df[attribute] > average_rating_rb\n",
+    "    beers_rating_rb_df['below_average'] = beers_rating_rb_df[attribute] <= average_rating_rb\n",
+    "\n",
+    "    # group by style and compute the average rating and the number of ratings for each beer\n",
+    "    beers_rating_rb_df = beers_rating_rb_df.groupby('beer_id').agg({attribute: ['mean', 'count'], 'above_average': 'sum', 'below_average': 'sum'}).reset_index()\n",
+    "    beers_rating_rb_df.columns = ['beer_id', 'average_rating', 'number_of_ratings', 'above_average', 'below_average']\n",
+    "\n",
+    "    # For BeerAdvocate dataset\n",
+    "    beers_rating_ba_df = ratings_ba_df.copy()\n",
+    "\n",
+    "    beers_rating_ba_df['above_average'] = beers_rating_ba_df[attribute] > average_rating_ba\n",
+    "    beers_rating_ba_df['below_average'] = beers_rating_ba_df[attribute] <= average_rating_ba\n",
+    "\n",
+    "    # group by style and compute the average rating and the number of ratings for each beer\n",
+    "    beers_rating_ba_df = beers_rating_ba_df.groupby('beer_id').agg({attribute: ['mean', 'count'], 'above_average': 'sum', 'below_average': 'sum'}).reset_index()\n",
+    "    beers_rating_ba_df.columns = ['beer_id', 'average_rating', 'number_of_ratings', 'above_average', 'below_average']\n",
+    "\n",
+    "    # concatenate the two dataframes\n",
+    "    beers_rating_df = pd.concat([beers_rating_rb_df, beers_rating_ba_df], ignore_index=True)\n",
+    "\n",
+    "    beers_rating_df = beers_rating_df.groupby('beer_id').agg({'average_rating': 'mean', 'number_of_ratings': 'sum', 'above_average': 'sum', 'below_average': 'sum'}).reset_index()\n",
+    "    beers_rating_df.columns = ['beer_id', 'average_rating', 'number_of_ratings', 'above_average', 'below_average']\n",
+    "    \n",
+    "    # compute the lower bound of the average rating for each beer\n",
+    "    beers_rating_df['lower_bound'] = beers_rating_df.apply(lambda row: wilson_lower_bound(row['above_average'], row['below_average']), axis=1)\n",
+    "\n",
+    "    # sort the dataframe by the lower bound of the average rating\n",
+    "    beers_rating_df.sort_values(by='lower_bound', ascending=False, inplace=True)\n",
+    "    \n",
+    "    best_beers = beers_rating_df.head(n)\n",
+    "\n",
+    "    return best_beers.beer_id.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_top_keywords_by_month(df, keywords_list, month, category, num_keywords):\n",
+    "    # Filter the DataFrame for the specified month\n",
+    "    month_df = df[df['month'] == month]\n",
+    "    \n",
+    "    best_beer_id = get_best_beers(month_df, category, n=10)\n",
+    "    \n",
+    "    # print the best beer id for the month\n",
+    "    print(f\"Best beer for the month of {month}:\", best_beer_id)\n",
+    "\n",
+    "    # filter the dataframe with the 10 best beers for the month\n",
+    "    best_beer_reviews = month_df[month_df['beer_id'].isin(best_beer_id)]\n",
+    "\n",
+    "    # Extract keywords from reviews using a matching function (e.g., matching_keywords)\n",
+    "    keyword_list = []\n",
+    "    for text in best_beer_reviews['text'].values.tolist():\n",
+    "        keyword_list.extend(matching_keywords(text, keywords_list))\n",
+    "\n",
+    "    # Count the number of times each keyword appears in the reviews\n",
+    "    keyword_counter = Counter(keyword_list)\n",
+    "\n",
+    "    # Sort the dictionary by value\n",
+    "    sorted_keywords = dict(sorted(keyword_counter.items(), key=lambda item: item[1], reverse=True))\n",
+    "\n",
+    "    # Return the top N keywords as a list of tuples (key, value)\n",
+    "    top_keywords = [(key, sorted_keywords[key]) for key in list(sorted_keywords.keys())[:num_keywords]]\n",
+    "\n",
+    "    return top_keywords"
    ]
   }
  ],
